AWS-resources/resources/cluster.tf
resource "aws_security_group" "sg" {
  vpc_id = aws_vpc.new_vpc.id
  // Definir regras de Acesso do meu cluster para a internet
  egress {
    // todas as portas liberadas para acessar a internet
    from_port = 0
    to_port   = 0
    // Significa que todos os protocólos estão liberados
    protocol = 1
    // Todos os Ips tem acesso
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }
  tags = {
    Name = "${var.prefix}-sg"
  }
}
// Criando role de acesso o cluster
resource "aws_iam_role" "cluster" {
  name               = "${var.prefix}-${var.cluster-name}-role"
  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}    
POLICY
}

resource "aws_iam_role_policy_attachment" "cluster-AmazonEKSVPCResourceController" {
  role       = aws_iam_role.cluster.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
}

resource "aws_iam_role_policy_attachment" "cluster-AmazonEKSClusterPolicy" {
  role       = aws_iam_role.cluster.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
}

// Configurando Cloudwatch na AWS

resource "aws_cloudwatch_log_group" "log" {
  name              = "/aws/eks/${var.prefix}-${var.cluster-name}/cluster"
  retention_in_days = var.retention-days
}

resource "aws_eks_cluster" "cluster" {
  name = "${var.prefix}-${var.cluster-name}"
  // Roles que tem acesso ao cluster
  role_arn = aws_iam_role.cluster.arn
  // definir tipos de logs
  enabled_cluster_log_types = ["api", "audit"]

  vpc_config {
    subnet_ids         = aws_subnet.subnets.*.id
    security_group_ids = [aws_security_group.sg.id]
  }
  depends_on = [
    aws_cloudwatch_log_group.log,
    aws_iam_role_policy_attachment.cluster-AmazonEKSVPCResourceController,
    aws_iam_role_policy_attachment.cluster-AmazonEKSClusterPolicy,
  ]

}
